ヘッダーマークアップ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="header">
+      <div class="header__bar">
+        <h1 class="header__top"><a herh="/">Tweet</a></h1>
+        <div class="user_nav">test1
+          <a class="post" herh="/">投稿する</a>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
+ 
