topマークアップ

--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -6,6 +6,7 @@
   background-color: white;
   border-bottom: 1px solid gray;
   padding: 10px;
+  z-index: 5;
   div.header__bar{
     width: 100%;
     margin-left: auto;
