--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,1 +1,8 @@
-hello
+<div class="content_row">
+  <div class="content_post" style="background-image: url(https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg);">
+    <div class="more"> 
+  <span class="name">
+  <a herf="#">
+  <span> 投稿者 </span>test
+    
+
