--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -20,6 +20,7 @@
       line-height: 41px;
       float: left;
       color: gray;
+      cursor: pointer;
       a {
         display: block;
       }
@@ -78,6 +79,7 @@
       text-align: center;
       border-radius: 3px;
       display: inline-block;
+      cursor: pointer;
     }
   }
 }
