--- a/app/assets/stylesheets/_tweet-index.scss
+++ b/app/assets/stylesheets/_tweet-index.scss
@@ -16,6 +16,38 @@
     a{
       display: block;
     }
+    .more{
+      position: absolute;
+      cursor: pointer;
+      top: 20px;
+      right: 30px;
+      z-index: 2;
+      height: 100px;
+      width: 80px;
+      text-align: right;
+      &:hover ul.more_list {
+        display: block;
+      }
+      ul.more_list {
+        position: absolute;
+        text-align: left;
+        width: 80px;
+        right: 0;
+        background-color: white;
+        display: none;
+        li {
+          border-bottom: 1px solid #ddd;
+          a{
+            text-decoration: none;
+            color: grey;
+          }
+          a:hover{
+            color: black;
+            text-decoration: none;
+        }
+        }
+      }
+    }
     .name{
       position: absolute;
       right: 30px;
