--- a/app/assets/stylesheets/_tweet-index.scss
+++ b/app/assets/stylesheets/_tweet-index.scss
@@ -5,6 +5,9 @@
   margin-top: 81px;
   margin-bottom: 0;
   max-width: 660px;
+  h2{
+    margin: 20px 0;
+  }
   .content_post{
     margin: 20px 0;
     padding: 30px;
